# Robocros2023

./: CMakeLists.txt  README.md  package.xml
launch/: start_gazebo_simulation.launch.py  start_nav.launch.py
log/: latest_build
maps/: local_map.pgm  my_map.xcf  my_map.yaml  my_map1.pgm
models/autocar/: model.sdf
models/autocar_real/: model.sdf
paths/: .~lock.path1.csv#  global_path.csv  path1.csv  path1_1.csv  path1_old.csv  path2.csv  testRAuto.csv
rviz/: view2.rviz
scripts/: calc_odom.py  car_in_global_map.py  create_local_cost_map.py  create_local_cost_map_new.py  create_local_cost_map_old.py  create_local_cost_map_real.py  create_local_map.cpp  create_path.py  global_rrt_star.py  go_to_poin_new  go_to_poin_new.py  go_to_point.py  hybrid_a_star copy.py  hybrid_a_star.py  local_rrt_star.py  mapping.cpp  pcd_to_map.py  rrtStar.cpp  ser_move.py  spawn_global_map.py  surf.py  test_r_auto.py  transforms.py  transforms_new.py  wheel_odom.py
worlds/: world_robocross.world
